--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <h1> THIS IS MY SECOND PAGE!!</h1>
-<p> THIS IS MY SECOND PAGE IN CLASS<p>
+<p> THIS IS MY SECOND PAGE IN CLASS</p>
 <b>Hello World</b>
