--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 <head>
   <meta charset="utf-8">
@@ -5,13 +6,10 @@
   <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
   <title>Main page</title>
   <style>
-     body{
-      background-color:red;
     body {
         background-color: black;
         color: white;
     }
-     </style>
     h1 {
         font-family: 'Notable', sans-serif;
         color: gray;
@@ -28,13 +26,11 @@
     }
   </style>
 </head>
- <body>
+
+<body>
     <img src="img/doge.jpg">
     <h1>This is the main page.</h1>
     <p>From this page you can access the other pages</p>
-    <p><a href="page1.html">Here is a link to page one</a></p>
-    <p><a href="page2.html">Here is a link to page two</a></p>
-    <p><a href="page3.html">Here is a link to page three</a></p>
     <ul>
       <li><a href="page1.html">Here is a link to page one</a></li>
       <li><a href="page2.html">Here is a link to page two</a></li>
