--- a/page1.html
+++ b/page1.html
@@ -6,7 +6,7 @@
   <style>
    </style>
 </head>
-<img src="img/marnie.jpg">
+<img src="img/destiny2.jpg">
 <p>This is page one</p>
 <a href="index.html">Back to main page</a>
 <body>
