--- a/page2.html
+++ b/page2.html
@@ -6,7 +6,7 @@
   <style>
    </style>
 </head>
-<img src="img/skater.jpg">
+<img src="img/warlock.titan.hunter.jpg">
 <p>This is page two</p>
 <a href="index.html">Back to main page</a>
 <body>
