--- a/page3.html
+++ b/page3.html
@@ -6,7 +6,7 @@
   <style>
    </style>
 </head>
-<img src="img/toast.jpg">
+<img src="img/warlock.jpg">
 <p>This is page three</p>
 <a href="index.html">Back to main page</a>
 <body>
