--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </head>
 
 <body>
-    <img src="img/doge.jpg">
+    <img src="img/forsakenbow.jpeg">
     <h1>This is the main page.</h1>
     <p>From this page you can access the other pages</p>
     <ul>
