--- a/index.html
+++ b/index.html
@@ -40,3 +40,15 @@
 </html>
 <body>
   <h1>First homework assignment.</h1>
+  <p>Photoshop practice.</p>
+
+  <div class="row">
+  <div class="column">
+    <img src="img/6.jpg" alt="original" style="width:100%">
+    </div>
+    <div class="column">
+      <img src="img/oldhouse.jpg" alt="updated" style="width:100%">
+      </div>
+</div>
+  
+  <p> <a href="https://www.youtube.com/watch?v=Elg9fsLbMXc"> How to make cartoon(animation) On Iphone & android </a></p>
