--- a/index.html
+++ b/index.html
@@ -52,3 +52,6 @@
 </div>
   
   <p> <a href="https://www.youtube.com/watch?v=Elg9fsLbMXc"> How to make cartoon(animation) On Iphone & android </a></p>
+  <h1>second homework assignment.</h1>
+  <p>Collage.>/p>
+    <img src="img/Collage.jpg" alt="original" style=width:100%>
