--- a/index.html
+++ b/index.html
@@ -55,3 +55,4 @@
   <h1>second homework assignment.</h1>
   <p>Collage.>/p>
     <img src="img/Collage.jpg" alt="original" style=width:100%>
+    <p>my favorite food to eat is oxtail, it's very popular in the Caribbean as well as many other countries around the world. Even in countries such as China and many countries within Africa. The way I grew up eating it is with is stewed with butter beans along with rice and peas
