--- a/index.html
+++ b/index.html
@@ -59,3 +59,8 @@
   
   <h1>third homework assignment.</h1>
   <img src="portrait".png">
+   
+   <h1>fourth homework assignment.</h1>
+   <img src="marleyposter".jpg">                       
+                          
+                          
