--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <p>my favorite food to eat is oxtail, it's very popular in the Caribbean as well as many other countries around the world. Even in countries such as China and many countries within Africa. I grew up eating it as stew with butter beans along with rice and peas. I also love dogs, my favorite breed are pitbulls. Around the world they have a bad rep for being aggressive towards other dogs as well as humans, I've never had a bad experience with them and neither has the rest of my family. In fact, I have a few of them back home in Jamaica at my grandmothers house. They are very fun to be around and they are protective of loved ones, sometimes they can be a bit much to handle cause of their activeness. They're also good with babies and todlers. I come from South Jamaica, Queens which has a strong diversity of Caribbean families. The food there is mostly junk, but there are many Caribbean restaurants around the area. Sometimes I go to them for beef patties and other Jamaican dishes, but theres nothing like my mothers Oxtail along with all of her home cooked meals.</p>
   
   <h1>third homework assignment.</h1>
-  <img src="portrait.png">
+  <img src="davian'sselfportrait.jpg">
    
    <h1>fourth homework assignment.</h1>
    <img src="marleyposter.jpg">                       
