--- a/index.html
+++ b/index.html
@@ -63,5 +63,8 @@
    <h1>fourth homework assignment.</h1>
    <img src="img/marleyposter.jpg">
   
+  <h1>final project.</h1>
+  <img src="img/new media 112 final.jpg">
+  
                           
                           
